--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jenssegers/date": "^3.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.8",
         "twbs/bootstrap": "4.3.1"
     },
     "require-dev": {
