--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
+        "laraveles/spanish": "^1.4",
         "twbs/bootstrap": "4.3.1"
     },
     "require-dev": {
