--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "grimthorr/laravel-toast": "^1.1",
         "jenssegers/date": "^3.5",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.8.*",
